# pygotham_2020_talk_prep

./: .gitignore
bargaining_chip_web_crawlers/python_and_rust/summary/: Cargo.toml  requirements.txt  test_summary.py
bargaining_chip_web_crawlers/python_and_rust/summary/src/: lib.rs
bargaining_chip_web_crawlers/python_and_rust/summary/summary/: __init__.py
bargaining_chip_web_crawlers/python_only/: summary.py
bargaining_chip_web_crawlers/rust_only/summary/: Cargo.toml
bargaining_chip_web_crawlers/rust_only/summary/src/: main.rs
hard_death_patch_me_to_fbi/: notes
sir_robot_brute_force/: notes
sir_robot_brute_force/python_and_rust/brute_force/: Cargo.toml
sir_robot_brute_force/python_and_rust/brute_force/src/: lib.rs
sir_robot_brute_force/python_and_rust/brute_force/tests/: test_dictionary_attack.py  test_dictionary_attack_cannot_find_word.py
sir_robot_brute_force/python_only/: brute_force_password.py
sir_robot_brute_force/rust_only/brute_force_password/: Cargo.toml
sir_robot_brute_force/rust_only/brute_force_password/src/: main.rs
sir_robot_fake_sms/: notes
sir_robot_only_one_hour/: notes
