[package]
name = "summary"
version = "0.1.0"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.11.0", features = ["extension-module"]}
rayon = "1.4.0"

[lib]
name = "summary"
crate-type = ["cdylib", "rlib"]


[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
